# DAAW-Compiler-Runtime

./: .env.example  .gitignore  CLAUDE.md  INSTALL.md  README.md  Usage.md  Usage.txt  architecture.md  progress-report.md  pyproject.toml  requirements.txt  sample_output.txt
.github/workflows/: ci.yml
docs/eval/: test_prompts.md  test_prompts_v2.md
docs/proposals/: tools_and_agents.md
evals/runs/full_25/: summary.json  summary.md
evals/runs/v2_prompts/: summary.json  summary.md
evals/runs/v2_resilience/: summary.json  summary.md
evals/runs/v2_split70b/: summary.json  summary.md
evals/runs/v4_antihallucination/: summary.json  summary.md
evals/runs/v5_sonnet_plan/: summary.json  summary.md
scripts/: live_smoke.py  probe_local_models.py  run_eval.py  verify_tools.py
src/break_down_task/: break_task.py
src/daaw/: __init__.py  __main__.py  __version__.py  config.py  interaction.py
src/daaw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/user_prompt_refine/: questionnaire.py
src/user_propmt_refine/: refine.py
tests/: conftest.py  test_agent_registry.py  test_artifact_store.py  test_circuit_breaker.py  test_compiler.py  test_compiler_task_count.py  test_config.py  test_context_pruner.py  test_critic.py  test_dag.py  test_degenerate_output.py  test_executor.py  test_executor_tools.py  test_generic_llm_agent.py  test_interaction.py  test_llm_unified.py  test_model_probe.py  test_rate_limiter.py  test_real_tools.py  test_schemas.py  test_streaming.py  test_streaming_display.py  test_tool_registry.py
(+835 files in other folders)
